--- a/src/components/ContentPolityka.astro
+++ b/src/components/ContentPolityka.astro
@@ -1,6 +1,6 @@
 ---
 const { langPrefix } = Astro.props;
-const prefix = langPrefix || "/pl";
+const prefix = langPrefix ?? "/";
 const { data } = Astro.props;
 ---
 
@@ -10,9 +10,9 @@ const { data } = Astro.props;
     <div class="container">
       <ul class="mil-breadcrumbs mil-center mil-mb-60">
         <li><a href={prefix} title="Start">Start</a></li>
-        <li><a href={`${prefix}/polityka_prywatnosci`} title={data.politykatxt01}>{data.politykatxt01}</a></li>
+        <li><a href={`${prefix}/polityka_prywatnosci/`} title={data.politykatxt01}>{data.politykatxt01}</a></li>
       </ul>
-      <h2 set:html={data.heading} />
+      <h1 set:html={data.heading} />
     </div>
   </div>
 </div>
@@ -23,7 +23,7 @@ const { data } = Astro.props;
   <div class="container mil-p-120-90">
     <div class="row justify-content-center">
       <div class="col-lg-12">
-        <h5 class="mil-up mil-mb-30">{data.politykatxt02}</h5>
+        <h2 class="mil-up mil-mb-30">{data.politykatxt02}</h2>
         <p class="mil-up mil-mb-30">
           {data.politykatxt03}
         </p>
@@ -33,9 +33,9 @@ const { data } = Astro.props;
         <p class="mil-up mil-mb-60">
           {data.politykatxt05}
         </p>
-        <h5 class="mil-up mil-mb-60">
+        <h2 class="mil-up mil-mb-60">
           {data.politykatxt06}
-        </h5>
+        </h2>
         <blockquote class="mil-up mil-mb-60">
           <p class="mil-up mil-mb-30">
             {data.politykatxt07}
@@ -48,9 +48,9 @@ const { data } = Astro.props;
           </p>
         </blockquote>
 
-        <h5 class="mil-up mil-mb-60">
+        <h2 class="mil-up mil-mb-60">
           {data.politykatxt10}
-        </h5>
+        </h2>
         <p class="mil-up mil-mb-30">
           {data.politykatxt11}
         </p>
@@ -59,17 +59,17 @@ const { data } = Astro.props;
         <p class="mil-up mil-mb-60">
           {data.politykatxt12}
         </p>
-        <h5 class="mil-up mil-mb-60">
+        <h2 class="mil-up mil-mb-60">
           {data.politykatxt13}
-        </h5>
+        </h2>
 
         <p class="mil-up mil-mb-60">
           {data.politykatxt14}
         </p>
 
-        <h5 class="mil-up mil-mb-60">
+        <h2 class="mil-up mil-mb-60">
           {data.politykatxt15}
-        </h5>
+        </h2>
         <p class="mil-up mil-mb-30">
           {data.politykatxt16}
         </p>
@@ -85,9 +85,9 @@ const { data } = Astro.props;
           {data.politykatxt19}
         </p>
 
-        <h5 class="mil-up mil-mb-60">
+        <h2 class="mil-up mil-mb-60">
           {data.politykatxt20}
-        </h5>
+        </h2>
         <p class="mil-up mil-mb-30">
           {data.politykatxt21}
         </p>
@@ -95,9 +95,9 @@ const { data } = Astro.props;
           {data.politykatxt22}
         </p>
 
-        <h5 class="mil-up mil-mb-60">
+        <h2 class="mil-up mil-mb-60">
           {data.politykatxt23}
-        </h5>
+        </h2>
         <p class="mil-up mil-mb-30">
           {data.politykatxt24}
         </p>
@@ -111,9 +111,9 @@ const { data } = Astro.props;
           {data.politykatxt27}
         </p>
 
-        <h5 class="mil-up mil-mb-60">
+        <h2 class="mil-up mil-mb-60">
           {data.politykatxt28}
-        </h5>
+        </h2>
         <p class="mil-up mil-mb-30">
           {data.politykatxt29}
         </p>
@@ -121,9 +121,9 @@ const { data } = Astro.props;
           {data.politykatxt30}
         </p>
 
-        <h5 class="mil-up mil-mb-60">
+        <h2 class="mil-up mil-mb-60">
           {data.politykatxt31}
-        </h5>
+        </h2>
         <p class="mil-up mil-mb-30">
           {data.politykatxt32}
         </p>
