--- a/src/components/Seolink.astro
+++ b/src/components/Seolink.astro
@@ -1,10 +1,9 @@
 ---
 const { langPrefix } = Astro.props;
-const prefix = langPrefix || "/pl";
-const { data } = Astro.props;
---- 
-
+const prefix = langPrefix ?? "/";
+---
 <noscript>
-  <a href="https://www.stomatolog-dentysta.pl" title="Dentysta Zielona Góra">Dentysta Zielona Góra</>
-  <a href="https://serwisagd.swiebodzin.pl" title="Naprawa pralek Świebodzin">Naprawa pralek Świebodzin</a>
+  <a href={prefix || "/"} title="Maxsoft - Strony WWW">Maxsoft</a>
+  <a href={`${prefix}/oferta/`} title="Oferta">Oferta</a>
+  <a href={`${prefix}/kontakt/`} title="Kontakt">Kontakt</a>
 </noscript>
