--- a/src/layouts/ErrorLayout.astro
+++ b/src/layouts/ErrorLayout.astro
@@ -7,15 +7,8 @@ import pl from '../i18n/pl.json';
 import en from '../i18n/en.json';
 
 const translations = { pl, en };
-export async function getStaticPaths() {
-  return [
-    { params: { lang: 'pl' } }, // Strona dla języka polskiego
-    { params: { lang: 'en' } }  // Strona dla języka angielskiego
-  ];
-}
-
-const { lang } = Astro.params as { lang: 'pl' | 'en' };
-const langPrefix = `/${lang}`;
+const lang = (Astro.params?.lang ?? Astro.props?.lang) as "pl" | "en" || "pl";
+const langPrefix = lang === "pl" ? "" : `/${lang}`;
 const content = translations[lang]?.index || translations.pl.index;
 const contentFooter = translations[lang].footer;
 const contentMenu = translations[lang].menu;
@@ -36,6 +29,7 @@ const {
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
+    <link rel="preload" href="/img/logo-czarne.png" as="image" />
     <SEO
       title={title}
       description={description}
@@ -53,15 +47,15 @@ const {
   <body>
     <div class="mil-wrapper" id="top">
 
-      <Menu data={contentMenu} langPrefix={langPrefix} />
+      <Menu data={contentMenu} langPrefix={langPrefix} lang={lang} />
       <div class="mil-curtain"></div>
 
       <div class="mil-frame">
         <div class="mil-frame-top mil-logo-fixed">
-          <a href={langPrefix} class="mil-logo">Maxsoft</a>
+          <a href={langPrefix || "/"} class="mil-logo">Maxsoft</a>
 
           <div class="mil-lang-switch">
-                <a href="/pl/" class:list={["mil-lang-flag", lang === 'pl' ? 'mil-active' : '']}>PL</a>
+                <a href="/" class:list={["mil-lang-flag", lang === 'pl' ? 'mil-active' : '']}>PL</a>
                 <a href="/en/" class:list={["mil-lang-flag", lang === 'en' ? 'mil-active' : '']}>EN</a>
           </div>
 
@@ -80,7 +74,9 @@ const {
       </div>
       <div class="mil-content">
         <div class="mil-main-transition">
-          <slot />
+          <main id="main">
+            <slot />
+          </main>
           <Footer data={contentFooter} langPrefix={langPrefix} />
           <HiddenElements />
         </div>
