--- a/src/components/ContentProjects.astro
+++ b/src/components/ContentProjects.astro
@@ -1,6 +1,6 @@
 ---
 const { langPrefix } = Astro.props;
-const prefix = langPrefix || "/pl";
+const prefix = langPrefix ?? "/";
 const { data } = Astro.props;
 ---
 
@@ -17,8 +17,8 @@ const { data } = Astro.props;
   <div class="mil-banner-content mil-up">
     <div class="container">
       <ul class="mil-breadcrumbs mil-mb-60">
-        <li><a href="/pl/" title="Start">Start</a></li>
-        <li><a href="/pl/oferta/" title={data.projektytxt01}>{data.projektytxt01}</a></li>
+        <li><a href={prefix || "/"} title="Start">Start</a></li>
+        <li><a href={`${prefix}/oferta/`} title={data.projektytxt01}>{data.projektytxt01}</a></li>
       </ul>
       <h1 class="mil-mb-60" set:html={data.heading} />
       <a
@@ -55,7 +55,7 @@ const { data } = Astro.props;
               >
                 <div class="mil-cover-frame mil-drag">
                   <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                    <img src="/img/works/projekt_strony_1.webp" alt="cover" />
+                    <img src="/img/works/projekt_strony_1.webp" alt="cover" loading="lazy" width="800" height="600" />
                   </div>
                 </div>
                 <div
@@ -76,14 +76,14 @@ const { data } = Astro.props;
                         {data.projektytxt03}
                       </div>
                     </div>
-                    <h5>{data.projektytxt04}</h5>
+                    <h2>{data.projektytxt04}</h2>
                   </div>
                   <div
                     data-swiper-parallax-y="120"
                     data-swiper-parallax-opacity="0"
                   >
                     <a
-                      href="/pl/projekty/strona-firmowa-wooden/"
+                      href={`${prefix}/projekty/strona-firmowa-wooden/`}
                       class="mil-button mil-arrow-place"
                       title={data.projektytxt05}
                     >
@@ -100,7 +100,7 @@ const { data } = Astro.props;
               >
                 <div class="mil-cover-frame mil-drag">
                   <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                    <img src="/img/works/projekt_strony_2.webp" alt="cover" />
+                    <img src="/img/works/projekt_strony_2.webp" alt="cover" loading="lazy" width="800" height="600" />
                   </div>
                 </div>
                 <div
@@ -121,14 +121,14 @@ const { data } = Astro.props;
                         {data.projektytxt06}
                       </div>
                     </div>
-                    <h5>{data.projektytxt07}</h5>
+                    <h2>{data.projektytxt07}</h2>
                   </div>
                   <div
                     data-swiper-parallax-y="100%"
                     data-swiper-parallax-opacity="0"
                   >
                     <a
-                      href="/pl/projekty/strona-firmowa-kupsaune/"
+                      href={`${prefix}/projekty/strona-firmowa-kupsaune/`}
                       class="mil-button mil-arrow-place"
                       title={data.projektytxt05}
                     >
@@ -145,7 +145,7 @@ const { data } = Astro.props;
               >
                 <div class="mil-cover-frame mil-drag">
                   <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                    <img src="/img/works/projekt_strony_3.webp" alt="cover" />
+                    <img src="/img/works/projekt_strony_3.webp" alt="cover" loading="lazy" width="800" height="600" />
                   </div>
                 </div>
                 <div
@@ -166,14 +166,14 @@ const { data } = Astro.props;
                         {data.projektytxt08}
                       </div>
                     </div>
-                    <h5>{data.projektytxt09}</h5>
+                    <h2>{data.projektytxt09}</h2>
                   </div>
                   <div
                     data-swiper-parallax-y="100%"
                     data-swiper-parallax-opacity="0"
                   >
                     <a
-                      href="/pl/projekty/strona-firmowa-westatre/"
+                      href={`${prefix}/projekty/strona-firmowa-westatre/`}
                       class="mil-button mil-arrow-place"
                       title={data.projektytxt05}
                     >
@@ -190,7 +190,7 @@ const { data } = Astro.props;
               >
                 <div class="mil-cover-frame mil-drag">
                   <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                    <img src="/img/works/projekt_strony_4.webp" alt="cover" />
+                    <img src="/img/works/projekt_strony_4.webp" alt="cover" loading="lazy" width="800" height="600" />
                   </div>
                 </div>
                 <div
@@ -211,14 +211,14 @@ const { data } = Astro.props;
                         {data.projektytxt10}
                       </div>
                     </div>
-                    <h5>{data.projektytxt11}</h5>
+                    <h2>{data.projektytxt11}</h2>
                   </div>
                   <div
                     data-swiper-parallax-y="100%"
                     data-swiper-parallax-opacity="0"
                   >
                     <a
-                      href="/pl/projekty/rolniczy-crm/"
+                      href={`${prefix}/projekty/rolniczy-crm/`}
                       class="mil-button mil-arrow-place"
                       title={data.projektytxt05}
                     >
@@ -235,7 +235,7 @@ const { data } = Astro.props;
               >
                 <div class="mil-cover-frame mil-drag">
                   <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                    <img src="/img/works/projekt_strony_5.webp" alt="cover" />
+                    <img src="/img/works/projekt_strony_5.webp" alt="cover" loading="lazy" width="800" height="600" />
                   </div>
                 </div>
                 <div
@@ -256,14 +256,14 @@ const { data } = Astro.props;
                         {data.projektytxt12}
                       </div>
                     </div>
-                    <h5>{data.projektytxt13}</h5>
+                    <h2>{data.projektytxt13}</h2>
                   </div>
                   <div
                     data-swiper-parallax-y="100%"
                     data-swiper-parallax-opacity="0"
                   >
                     <a
-                      href="/pl/projekty/api-jbr-rogowiec/"
+                      href={`${prefix}/projekty/api-jbr-rogowiec/`}
                       class="mil-button mil-arrow-place"
                       title={data.projektytxt05}
                     >
@@ -280,7 +280,7 @@ const { data } = Astro.props;
               >
                 <div class="mil-cover-frame mil-drag">
                   <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                    <img src="/img/works/projekt_strony_6.webp" alt="cover" />
+                    <img src="/img/works/projekt_strony_6.webp" alt="cover" loading="lazy" width="800" height="600" />
                   </div>
                 </div>
                 <div
@@ -301,14 +301,14 @@ const { data } = Astro.props;
                         {data.projektytxt14}
                       </div>
                     </div>
-                    <h5>{data.projektytxt15}</h5>
+                    <h2>{data.projektytxt15}</h2>
                   </div>
                   <div
                     data-swiper-parallax-y="100%"
                     data-swiper-parallax-opacity="0"
                   >
                     <a
-                      href="/pl/projekty/sklep-rolniczy/"
+                      href={`${prefix}/projekty/sklep-rolniczy/`}
                       class="mil-button mil-arrow-place"
                       title={data.projektytxt05}
                     >
@@ -326,7 +326,7 @@ const { data } = Astro.props;
               >
                 <div class="mil-cover-frame mil-drag">
                   <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                    <img src="/img/works/projekt_strony_7.webp" alt="cover" />
+                    <img src="/img/works/projekt_strony_7.webp" alt="cover" loading="lazy" width="800" height="600" />
                   </div>
                 </div>
                 <div
@@ -347,14 +347,14 @@ const { data } = Astro.props;
                         {data.projektytxt16}
                       </div>
                     </div>
-                    <h5>{data.projektytxt17}</h5>
+                    <h2>{data.projektytxt17}</h2>
                   </div>
                   <div
                     data-swiper-parallax-y="100%"
                     data-swiper-parallax-opacity="0"
                   >
                     <a
-                      href="/pl/projekty/api-olx/"
+                      href={`${prefix}/projekty/api-olx/`}
                       class="mil-button mil-arrow-place"
                       title={data.projektytxt05}
                     >
