--- a/src/components/ErrorContent.astro
+++ b/src/components/ErrorContent.astro
@@ -1,6 +1,6 @@
 ---
 const { langPrefix } = Astro.props;
-const prefix = langPrefix || "/pl";
+const prefix = langPrefix ?? "/";
 const { data } = Astro.props;
 ---
 
@@ -22,11 +22,11 @@ const { data } = Astro.props;
           <h1 class="mil-404" data-text="404">404</h1>
         </div>
 
-        <h4 class="mil-404-text mil-dark mil-mb-60">
+        <h2 class="mil-404-text mil-dark mil-mb-60">
           {data.heading}
           {data.message}
-        </h4>
-        <a href={`/${prefix}`} class="mil-button mil-arrow-place">
+        </h2>
+        <a href={prefix || "/"} class="mil-button mil-arrow-place">
           <span>{data.button}</span>
         </a>
       </div>
