--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
 const { langPrefix } = Astro.props;
-const prefix = langPrefix || "/pl";
+const prefix = langPrefix ?? "/";
 const { data } = Astro.props;
 ---
 
@@ -41,7 +41,7 @@ const { data } = Astro.props;
               <nav class="mil-footer-menu mil-mb-60">
                 <ul>
                   <li class="mil-has-children mil-active">
-                    <a href={prefix} title="Start">Start</a>
+                    <a href={prefix || "/"} title="Start">Start</a>
                   </li>
                   <li class="mil-has-children">
                     <a href={`${prefix}/oferta/`} title={data.footertxt6}
@@ -108,11 +108,11 @@ const { data } = Astro.props;
         <div class="col-md-7 col-lg-6">
           <div class="row justify-content-between">
             <div class="col-md-6 col-lg-5 mil-mb-60">
-              <h6 class="mil-muted mil-up mil-mb-30">Świebodzin - Lubrza</h6>
+              <p class="mil-muted mil-up mil-mb-30 mil-footer-section">Świebodzin - Lubrza</p>
               <p class="mil-light-soft mil-up" set:html={data.footertxt4} />
             </div>
             <div class="col-md-6 col-lg-5 mil-mb-60">
-              <h6 class="mil-muted mil-up mil-mb-30">Zielona Góra</h6>
+              <p class="mil-muted mil-up mil-mb-30 mil-footer-section">Zielona Góra</p>
               <p class="mil-light-soft mil-up" set:html={data.footertxt5} />
             </div>
           </div>
