--- a/src/pages/oferta.astro
+++ b/src/pages/oferta.astro
@@ -1,18 +1,16 @@
 ---
 export const prerender = true;
 
-import ErrorLayout from "../layouts/ErrorLayout.astro";
-import ErrorContent from "../components/ErrorContent.astro";
+import PageLayout from "../layouts/PageLayout.astro";
+import ContentOferta from "../components/ContentOferta.astro";
 import pl from "../i18n/pl.json";
 
-const pageData = pl.error;
+const pageData = pl.oferta;
 const contentFooter = pl.footer;
 const contentMenu = pl.menu;
-
-Astro.response.status = 404;
 ---
 
-<ErrorLayout
+<PageLayout
   lang="pl"
   langPrefix=""
   title={pageData.title}
@@ -22,8 +20,5 @@ Astro.response.status = 404;
   contentMenu={contentMenu}
   contentFooter={contentFooter}
 >
-  <>
-    <ErrorContent data={pageData} langPrefix="" />
-    <div style="display:none" aria-hidden="true"></div>
-  </>
-</ErrorLayout>
+  <ContentOferta data={pageData} langPrefix="" />
+</PageLayout>
