Seo and 404 erro fix

--- a/src/components/Seolink.astro
+++ b/src/components/Seolink.astro
@@ -6,4 +6,6 @@ const prefix = langPrefix ?? "/";
   <a href={prefix || "/"} title="Maxsoft - Strony WWW">Maxsoft</a>
   <a href={`${prefix}/oferta/`} title="Oferta">Oferta</a>
   <a href={`${prefix}/kontakt/`} title="Kontakt">Kontakt</a>
+  <a href={`https://www.stomatolog-dentysta.pl/`} title="Dentysta Zielona Góra">Dentysta Zielona Góra</a>
+  <a href={`https://www.serwisagd.swiebodzin.pl/`} title="Serwis AGD Świebodzin">Serwis AGD Świebodzin</a>
 </noscript>
